--- a/faq.html
+++ b/faq.html
@@ -34,6 +34,11 @@
             </div>
             <div class="mobile-overlay"></div>
             <nav>
+                <button class="mobile-menu-back" aria-label="Cerrar menú">
+                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
                 <ul>
                     <li><a href="index.html#funcionamiento">Funcionamiento</a></li>
                     <li><a href="index.html#why-eureka">Beneficios</a></li>
@@ -70,61 +75,118 @@
                     <!-- Question 1 -->
                     <div class="faq-card">
                         <button class="faq-toggle">
-                            <span>¿Cómo sé si Eureka es conveniente para mi empresa?</span>
+                            <span>¿Eureka es solo un sistema de reportes?</span>
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Eureka es ideal si manejas inventarios en múltiples cadenas y necesitas automatizar la
-                                descarga y análisis de información para tomar decisiones rápidas y precisas.</p>
+                            <p>No.<br>
+                            Eureka es un sistema de control comercial que conecta información de las cadenas, indicadores de desempeño y validación en tienda para que las decisiones se basen en lo que realmente está pasando, no solo en lo que dice el sistema.</p>
                         </div>
                     </div>
 
                     <!-- Question 2 -->
                     <div class="faq-card">
                         <button class="faq-toggle">
-                            <span>¿Cuanto cuesta implementar Eureka?</span>
+                            <span>¿En qué se diferencia Eureka de los portales de las cadenas?</span>
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Ofrecemos diferentes planes adaptados al tamaño de tu operación. Puedes solicitar una
-                                demo gratuita para conocer más detalles.</p>
+                            <p>Los portales muestran información aislada y, muchas veces, con retraso.<br>
+                            Eureka integra toda la información en un solo lugar, la traduce en indicadores claros y la cruza con evidencia en tienda para detectar problemas que los portales no muestran por sí solos.</p>
                         </div>
                     </div>
 
                     <!-- Question 3 -->
                     <div class="faq-card">
                         <button class="faq-toggle">
-                            <span>¿Es compatible con todos los portales?</span>
+                            <span>¿Necesito cambiar mis procesos o sistemas actuales?</span>
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Sí, Eureka se conecta automáticamente a los principales portales de autoservicio para
-                                descargar y unificar tu información.</p>
+                            <p>No.<br>
+                            Eureka se adapta a tu operación actual y trabaja sobre la información que ya existe. No reemplaza tus procesos: los hace más visibles y accionables.</p>
                         </div>
                     </div>
 
                     <!-- Question 4 -->
                     <div class="faq-card">
                         <button class="faq-toggle">
-                            <span>¿Tienen soporte técnico?</span>
+                            <span>¿Para quién está pensado Eureka?</span>
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Contamos con un equipo de soporte especializado disponible para ayudarte a resolver
-                                cualquier duda y asegurar el funcionamiento continuo.</p>
+                            <p>Para directores y gerentes comerciales que necesitan:<br>
+                            control sobre inventarios y ejecución,<br>
+                            claridad para decidir,<br>
+                            y evidencia para respaldar sus acciones frente al equipo y al comprador.</p>
                         </div>
                     </div>
 
                     <!-- Question 5 -->
                     <div class="faq-card">
                         <button class="faq-toggle">
-                            <span>¿Mis datos están seguros con Eureka?</span>
+                            <span>¿Qué tipo de resultados puedo esperar?</span>
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Absolutamente. Utilizamos protocolos de encriptación de última generación y cumplimos con
-                                estrictas normas de privacidad para garantizar que tu información comercial esté siempre
-                                protegida.</p>
+                            <p>Mayor visibilidad sobre inventarios, detección temprana de agotados y errores de ejecución, reducción de devoluciones y decisiones más rápidas con menor fricción interna.<br>
+                            Los resultados dependen de la operación, pero el impacto se ve desde las primeras semanas.</p>
+                        </div>
+                    </div>
+
+                    <!-- Question 6 -->
+                    <div class="faq-card">
+                        <button class="faq-toggle">
+                            <span>¿Eureka incluye promotoría?</span>
+                            <span class="faq-icon-plus">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>Eureka no sustituye a la promotoría.<br>
+                            La complementa, dándole foco y evidencia para validar que lo planeado sí se ejecute en tienda y que los inventarios y exhibiciones correspondan a la realidad.</p>
+                        </div>
+                    </div>
+
+                    <!-- Question 7 -->
+                    <div class="faq-card">
+                        <button class="faq-toggle">
+                            <span>¿Cuánto tiempo toma empezar a ver información?</span>
+                            <span class="faq-icon-plus">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>Una vez integrada la información, los primeros indicadores y hallazgos están disponibles en días, no meses. No se trata de implementar un sistema complejo, sino de empezar a ver con claridad.</p>
+                        </div>
+                    </div>
+
+                    <!-- Question 8 -->
+                    <div class="faq-card">
+                        <button class="faq-toggle">
+                            <span>¿Hay contratos forzosos o compromisos a largo plazo?</span>
+                            <span class="faq-icon-plus">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>No. Puedes iniciar con un periodo de prueba para evaluar el valor real de Eureka antes de tomar una decisión.</p>
+                        </div>
+                    </div>
+
+                    <!-- Question 9 -->
+                    <div class="faq-card">
+                        <button class="faq-toggle">
+                            <span>¿Eureka reemplaza al análisis humano?</span>
+                            <span class="faq-icon-plus">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>No. Eureka no toma decisiones por ti. Te da la información, el contexto y la evidencia para que tu equipo decida mejor y actúe con mayor certeza.</p>
+                        </div>
+                    </div>
+
+                    <!-- Question 10 -->
+                    <div class="faq-card">
+                        <button class="faq-toggle">
+                            <span>¿Por qué debería probar Eureka ahora?</span>
+                            <span class="faq-icon-plus">+</span>
+                        </button>
+                        <div class="faq-answer">
+                            <p>Porque cada semana sin visibilidad clara es una semana en la que se pierden ventas, se generan fricciones internas y se toman decisiones con información incompleta.</p>
                         </div>
                     </div>
 
