--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <nav>
                 <button class="mobile-menu-back" aria-label="Cerrar menú">
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
                     </svg>
                 </button>
                 <ul>
@@ -67,7 +68,8 @@
                         <h1>Menos agotados.<br>Menos pérdidas.<br>Más control en tienda.</h1>
                         <p class="hero-description">
                             Mientras tus datos están dispersos y llegan tarde, las decisiones cuestan margen.<br>
-                            Eureka conecta ventas, inventarios y ejecución en tienda para que veas los problemas antes de que impacten el resultado.
+                            Eureka conecta ventas, inventarios y ejecución en tienda para que veas los problemas antes
+                            de que impacten el resultado.
                         </p>
                         <div class="hero-buttons">
                             <a href="mailto:omar.tirado@eurekamx.com.mx" class="btn-white">Solicitar Demo</a>
@@ -87,7 +89,9 @@
         <div class="hiw-container">
             <h2 class="hiw-title">¿Cómo funciona Eureka?</h2>
             <p class="hiw-subtitle">
-                Eureka es un sistema de control comercial que conecta la información de las cadenas, las decisiones del equipo y lo que realmente ocurre en tienda. Funciona en tres procesos que permiten pasar del dato a la acción con evidencia.
+                Eureka es un sistema de control comercial que conecta la información de las cadenas, las decisiones del
+                equipo y lo que realmente ocurre en tienda. Funciona en tres procesos que permiten pasar del dato a la
+                acción con evidencia.
             </p>
 
             <div class="accordion-section">
@@ -100,7 +104,9 @@
                             <span class="accordion-icon"></span>
                         </button>
                         <div class="accordion-content">
-                            <p>Eureka concentra y actualiza la información de ventas e inventarios de todas las cadenas comerciales para que tu equipo trabaje siempre con los mismos datos, sin retrasos ni versiones distintas. Menos tiempo explicando números, más tiempo tomando decisiones.</p>
+                            <p>Eureka concentra y actualiza la información de ventas e inventarios de todas las cadenas
+                                comerciales para que tu equipo trabaje siempre con los mismos datos, sin retrasos ni
+                                versiones distintas. Menos tiempo explicando números, más tiempo tomando decisiones.</p>
                         </div>
                     </div>
 
@@ -111,7 +117,9 @@
                             <span class="accordion-icon"></span>
                         </button>
                         <div class="accordion-content">
-                            <p>La información se transforma en indicadores claros que permiten detectar desviaciones, priorizar acciones y enfocar al equipo en lo que realmente impacta el resultado. No se trata de ver más reportes, sino de saber dónde actuar primero.</p>
+                            <p>La información se transforma en indicadores claros que permiten detectar desviaciones,
+                                priorizar acciones y enfocar al equipo en lo que realmente impacta el resultado. No se
+                                trata de ver más reportes, sino de saber dónde actuar primero.</p>
                         </div>
                     </div>
 
@@ -122,7 +130,9 @@
                             <span class="accordion-icon"></span>
                         </button>
                         <div class="accordion-content">
-                            <p>Eureka conecta los indicadores con lo que sucede en tienda, dando visibilidad sobre inventarios, exhibiciones y promociones para validar que lo planeado sí se ejecute. Así, las decisiones dejan de basarse en suposiciones y se respaldan con evidencia real.</p>
+                            <p>Eureka conecta los indicadores con lo que sucede en tienda, dando visibilidad sobre
+                                inventarios, exhibiciones y promociones para validar que lo planeado sí se ejecute. Así,
+                                las decisiones dejan de basarse en suposiciones y se respaldan con evidencia real.</p>
                         </div>
                     </div>
                 </div>
@@ -245,19 +255,22 @@
                         <div class="promo-carousel-item active" data-index="0">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-0" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-0" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
                                     <h3>Planificación de Rutas</h3>
-                                    <p>Optimiza las rutas de visita para maximizar la eficiencia de tu equipo de promotoría.</p>
+                                    <p>Optimiza las rutas de visita para maximizar la eficiencia de tu equipo de
+                                        promotoría.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="promo-carousel-item" data-index="1">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-1" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-1" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -269,7 +282,8 @@
                         <div class="promo-carousel-item" data-index="2">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-2" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-2" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -281,7 +295,8 @@
                         <div class="promo-carousel-item" data-index="3">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-3" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-3" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -293,48 +308,56 @@
                         <div class="promo-carousel-item" data-index="4">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-4" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-4" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
                                     <h3>Seguimiento de Incidencias</h3>
-                                    <p>Registra y da seguimiento a incidencias en tiendas para resolver problemas rápidamente.</p>
+                                    <p>Registra y da seguimiento a incidencias en tiendas para resolver problemas
+                                        rápidamente.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="promo-carousel-item" data-index="5">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-5" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-5" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
                                     <h3>Control de Entradas y Salidas</h3>
-                                    <p>Registra automáticamente las entradas y salidas de promotores en cada tienda visitada.</p>
+                                    <p>Registra automáticamente las entradas y salidas de promotores en cada tienda
+                                        visitada.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="promo-carousel-item" data-index="6">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-6" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-6" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
                                     <h3>Acceso por GPS</h3>
-                                    <p>La aplicación solo funciona cuando el promotor está físicamente dentro de la tienda.</p>
+                                    <p>La aplicación solo funciona cuando el promotor está físicamente dentro de la
+                                        tienda.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="promo-carousel-item" data-index="7">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-7" src="" alt="Functionality Preview" style="display:none;">
+                                    <img id="promo-display-img-7" src="" alt="Functionality Preview"
+                                        style="display:none;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
                                     <h3>Reportes Automatizados</h3>
-                                    <p>Genera reportes detallados automáticamente sin necesidad de Excel o trabajo manual.</p>
+                                    <p>Genera reportes detallados automáticamente sin necesidad de Excel o trabajo
+                                        manual.</p>
                                 </div>
                             </div>
                         </div>
@@ -435,7 +458,8 @@
     <section id="slogan-cta" class="slogan-section">
         <div class="slogan-container">
             <h2 class="slogan-title">¿Quieres ver dónde estás perdiendo ventas hoy?</h2>
-            <p class="slogan-subtitle">Obtén un análisis sin costo de tus ventas e inventarios y detecta oportunidades reales antes de que impacten el resultado.</p>
+            <p class="slogan-subtitle">Obtén un análisis sin costo de tus ventas e inventarios y detecta oportunidades
+                reales antes de que impacten el resultado.</p>
             <button class="slogan-btn">
                 <span class="btn-main">15 DÍAS PARA PROBAR CON TUS DATOS</span>
                 <span class="btn-sub">Sin contratos ni plazos forzosos.</span>
@@ -463,7 +487,8 @@
                 </div>
             </div>
             <div class="contact-actions">
-                <a href="mailto:omar.tirado@eurekamx.com.mx?subject=Solicitud%20de%20An%C3%A1lisis%20-%20Eureka&body=Hola,%0A%0AMe%20gustar%C3%ADa%20solicitar%20un%20an%C3%A1lisis%20de%20mi%20operaci%C3%B3n%20comercial.%0A%0ASaludos" class="action-btn primary" target="_blank">Solicitar análisis</a>
+                <a href="mailto:omar.tirado@eurekamx.com.mx?subject=Solicitud%20de%20An%C3%A1lisis%20-%20Eureka&body=Hola,%0A%0AMe%20gustar%C3%ADa%20solicitar%20un%20an%C3%A1lisis%20de%20mi%20operaci%C3%B3n%20comercial.%0A%0ASaludos"
+                    class="action-btn primary" target="_blank">Solicitar análisis</a>
                 <a href="https://wa.me/526699947227" class="action-btn primary" target="_blank">WhatsApp</a>
                 <a href="tel:+526699947227" class="action-btn primary">Llamar</a>
             </div>
@@ -489,8 +514,13 @@
                     </ul>
                 </div>
                 <div class="footer-col footer-social">
-                    <a href="https://www.linkedin.com/company/eureka-mx/" aria-label="LinkedIn"><img
-                            src="Recursos/LinkedIn_logo_initials.png" alt="LinkedIn"></a>
+                    <a href="https://wa.me/526699947227" aria-label="WhatsApp" target="_blank"
+                        style="margin-right: 10px;">
+                        <img src="Recursos/Whattsap icon.png" alt="WhatsApp">
+                    </a>
+                    <a href="https://www.linkedin.com/company/eureka-mx/" aria-label="LinkedIn">
+                        <img src="Recursos/LinkedIn_logo_initials.png" alt="LinkedIn">
+                    </a>
                 </div>
             </div>
 
