Actualizacion imagenes nav bar

--- a/index.html
+++ b/index.html
@@ -209,42 +209,42 @@
                 <div class="promo-list">
                     <button class="promo-item active" data-title="Planificación de Rutas"
                         data-desc="Optimiza las rutas de visita para maximizar la eficiencia de tu equipo de promotoría."
-                        data-img="Recursos/promo_rutas.png">
+                        data-img="Recursos/Software para promotoria /Planeacion de Rutas.png">
                         Planificación de rutas
                     </button>
                     <button class="promo-item" data-title="Fotos de Anaqueles"
                         data-desc="Captura y registra el estado de los anaqueles en cada tienda visitada."
-                        data-img="Recursos/promo_fotos.png">
+                        data-img="Recursos/Software para promotoria /Fotos de Anaqueles.jpeg">
                         Fotos de Anaqueles
                     </button>
                     <button class="promo-item" data-title="Control de Inventarios"
                         data-desc="Gestiona el control y conteo de inventarios en bodega y tiendas."
-                        data-img="Recursos/promo_inventarios.png">
+                        data-img="Recursos/Software para promotoria /Control de inventarios.jpg">
                         Control de inventarios
                     </button>
                     <button class="promo-item" data-title="Control de Lotes"
                         data-desc="Rastrea y controla los lotes de productos para evitar vencimientos."
-                        data-img="Recursos/promo_lotes.png">
+                        data-img="Recursos/Software para promotoria /Control de lotes.jpg">
                         Control de Lotes
                     </button>
                     <button class="promo-item" data-title="Seguimiento de Incidencias"
                         data-desc="Registra y da seguimiento a incidencias en tiendas para resolver problemas rápidamente."
-                        data-img="Recursos/promo_incidencias.png">
+                        data-img="Recursos/Software para promotoria /Seguimiento de Incidencias.jpeg">
                         Seguimiento de incidencias
                     </button>
                     <button class="promo-item" data-title="Control de Entradas y Salidas"
                         data-desc="Registra automáticamente las entradas y salidas de promotores en cada tienda visitada."
-                        data-img="Recursos/promo_entradas.png">
+                        data-img="Recursos/Software para promotoria /Control entradas y salidas.jpeg">
                         Control de entradas y salidas
                     </button>
                     <button class="promo-item" data-title="Acceso por GPS"
                         data-desc="La aplicación solo funciona cuando el promotor está físicamente dentro de la tienda."
-                        data-img="Recursos/promo_gps.png">
+                        data-img="Recursos/Software para promotoria /Accesos por GPS.jpeg">
                         Acceso por GPS
                     </button>
                     <button class="promo-item" data-title="Reportes Automatizados"
                         data-desc="Genera reportes detallados automáticamente sin necesidad de Excel o trabajo manual."
-                        data-img="Recursos/promo_reportes.png">
+                        data-img="Recursos/Software para promotoria /Reportes Automatizados.jpg">
                         Reportes automatizados
                     </button>
                 </div>
@@ -255,8 +255,9 @@
                         <div class="promo-carousel-item active" data-index="0">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-0" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-0"
+                                        src="Recursos/Software para promotoria /Planeacion de Rutas.png"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -269,8 +270,9 @@
                         <div class="promo-carousel-item" data-index="1">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-1" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-1"
+                                        src="Recursos/Software para promotoria /Fotos de Anaqueles.jpeg"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -282,8 +284,9 @@
                         <div class="promo-carousel-item" data-index="2">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-2" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-2"
+                                        src="Recursos/Software para promotoria /Control de inventarios.jpg"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -295,8 +298,9 @@
                         <div class="promo-carousel-item" data-index="3">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-3" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-3"
+                                        src="Recursos/Software para promotoria /Control de lotes.jpg"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -308,8 +312,9 @@
                         <div class="promo-carousel-item" data-index="4">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-4" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-4"
+                                        src="Recursos/Software para promotoria /Seguimiento de Incidencias.jpeg"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -322,8 +327,9 @@
                         <div class="promo-carousel-item" data-index="5">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-5" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-5"
+                                        src="Recursos/Software para promotoria /Control entradas y salidas.jpeg"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -336,8 +342,9 @@
                         <div class="promo-carousel-item" data-index="6">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-6" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-6"
+                                        src="Recursos/Software para promotoria /Accesos por GPS.jpeg"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
@@ -350,8 +357,9 @@
                         <div class="promo-carousel-item" data-index="7">
                             <div class="display-card">
                                 <div class="display-image-placeholder">
-                                    <img id="promo-display-img-7" src="" alt="Functionality Preview"
-                                        style="display:none;">
+                                    <img id="promo-display-img-7"
+                                        src="Recursos/Software para promotoria /Reportes Automatizados.jpg"
+                                        alt="Functionality Preview" style="display:block;">
                                     <div class="placeholder-box"></div>
                                 </div>
                                 <div class="display-info">
