Close to finish line

--- a/faq.html
+++ b/faq.html
@@ -12,11 +12,7 @@
 
 <body>
     <!-- Top Bar -->
-    <div class="top-bar">
-        <p>Listo para tener tus ventas a solo un par de clicks? <a href="index.html#contact-info"
-                style="font-weight: bold; text-decoration: underline; color: inherit; cursor: pointer;">Contactanos!</a>
-        </p>
-    </div>
+
 
     <!-- Navigation -->
     <header>
@@ -36,7 +32,8 @@
             <nav>
                 <button class="mobile-menu-back" aria-label="Cerrar menú">
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
                     </svg>
                 </button>
                 <ul>
@@ -80,7 +77,9 @@
                         </button>
                         <div class="faq-answer">
                             <p>No.<br>
-                            Eureka es un sistema de control comercial que conecta información de las cadenas, indicadores de desempeño y validación en tienda para que las decisiones se basen en lo que realmente está pasando, no solo en lo que dice el sistema.</p>
+                                Eureka es un sistema de control comercial que conecta información de las cadenas,
+                                indicadores de desempeño y validación en tienda para que las decisiones se basen en lo
+                                que realmente está pasando, no solo en lo que dice el sistema.</p>
                         </div>
                     </div>
 
@@ -92,7 +91,9 @@
                         </button>
                         <div class="faq-answer">
                             <p>Los portales muestran información aislada y, muchas veces, con retraso.<br>
-                            Eureka integra toda la información en un solo lugar, la traduce en indicadores claros y la cruza con evidencia en tienda para detectar problemas que los portales no muestran por sí solos.</p>
+                                Eureka integra toda la información en un solo lugar, la traduce en indicadores claros y
+                                la cruza con evidencia en tienda para detectar problemas que los portales no muestran
+                                por sí solos.</p>
                         </div>
                     </div>
 
@@ -104,7 +105,8 @@
                         </button>
                         <div class="faq-answer">
                             <p>No.<br>
-                            Eureka se adapta a tu operación actual y trabaja sobre la información que ya existe. No reemplaza tus procesos: los hace más visibles y accionables.</p>
+                                Eureka se adapta a tu operación actual y trabaja sobre la información que ya existe. No
+                                reemplaza tus procesos: los hace más visibles y accionables.</p>
                         </div>
                     </div>
 
@@ -116,9 +118,9 @@
                         </button>
                         <div class="faq-answer">
                             <p>Para directores y gerentes comerciales que necesitan:<br>
-                            control sobre inventarios y ejecución,<br>
-                            claridad para decidir,<br>
-                            y evidencia para respaldar sus acciones frente al equipo y al comprador.</p>
+                                control sobre inventarios y ejecución,<br>
+                                claridad para decidir,<br>
+                                y evidencia para respaldar sus acciones frente al equipo y al comprador.</p>
                         </div>
                     </div>
 
@@ -129,8 +131,11 @@
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Mayor visibilidad sobre inventarios, detección temprana de agotados y errores de ejecución, reducción de devoluciones y decisiones más rápidas con menor fricción interna.<br>
-                            Los resultados dependen de la operación, pero el impacto se ve desde las primeras semanas.</p>
+                            <p>Mayor visibilidad sobre inventarios, detección temprana de agotados y errores de
+                                ejecución, reducción de devoluciones y decisiones más rápidas con menor fricción
+                                interna.<br>
+                                Los resultados dependen de la operación, pero el impacto se ve desde las primeras
+                                semanas.</p>
                         </div>
                     </div>
 
@@ -142,7 +147,8 @@
                         </button>
                         <div class="faq-answer">
                             <p>Eureka no sustituye a la promotoría.<br>
-                            La complementa, dándole foco y evidencia para validar que lo planeado sí se ejecute en tienda y que los inventarios y exhibiciones correspondan a la realidad.</p>
+                                La complementa, dándole foco y evidencia para validar que lo planeado sí se ejecute en
+                                tienda y que los inventarios y exhibiciones correspondan a la realidad.</p>
                         </div>
                     </div>
 
@@ -153,7 +159,9 @@
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Una vez integrada la información, los primeros indicadores y hallazgos están disponibles en días, no meses. No se trata de implementar un sistema complejo, sino de empezar a ver con claridad.</p>
+                            <p>Una vez integrada la información, los primeros indicadores y hallazgos están disponibles
+                                en días, no meses. No se trata de implementar un sistema complejo, sino de empezar a ver
+                                con claridad.</p>
                         </div>
                     </div>
 
@@ -164,7 +172,8 @@
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>No. Puedes iniciar con un periodo de prueba para evaluar el valor real de Eureka antes de tomar una decisión.</p>
+                            <p>No. Puedes iniciar con un periodo de prueba para evaluar el valor real de Eureka antes de
+                                tomar una decisión.</p>
                         </div>
                     </div>
 
@@ -175,7 +184,8 @@
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>No. Eureka no toma decisiones por ti. Te da la información, el contexto y la evidencia para que tu equipo decida mejor y actúe con mayor certeza.</p>
+                            <p>No. Eureka no toma decisiones por ti. Te da la información, el contexto y la evidencia
+                                para que tu equipo decida mejor y actúe con mayor certeza.</p>
                         </div>
                     </div>
 
@@ -186,7 +196,8 @@
                             <span class="faq-icon-plus">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>Porque cada semana sin visibilidad clara es una semana en la que se pierden ventas, se generan fricciones internas y se toman decisiones con información incompleta.</p>
+                            <p>Porque cada semana sin visibilidad clara es una semana en la que se pierden ventas, se
+                                generan fricciones internas y se toman decisiones con información incompleta.</p>
                         </div>
                     </div>
 
@@ -272,6 +283,9 @@
     </div>
 
     <script src="script.js"></script>
+    <a href="https://wa.me/526699947227" class="whatsapp-float" target="_blank">
+        <img src="Recursos/Whattsap icon.png" alt="WhatsApp">
+    </a>
 </body>
 
 </html>
