--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 
 <body>
     <!-- Top Bar -->
-    <div class="top-bar">
-        <p>Listo para tener tus ventas a solo un par de clicks? <a href="#contact-info"
-                style="font-weight: bold; text-decoration: underline; color: inherit; cursor: pointer;">Contactanos!</a>
-        </p>
-    </div>
+
 
     <!-- Navigation -->
     <header>
@@ -566,6 +562,9 @@
 
 
     <script src="script.js"></script>
+    <a href="https://wa.me/526699947227" class="whatsapp-float" target="_blank">
+        <img src="Recursos/Whattsap icon.png" alt="WhatsApp">
+    </a>
 </body>
 
 </html>
