--- a/login.html
+++ b/login.html
@@ -35,7 +35,8 @@
                     <li><a href="index.html#contact-info">Contactos</a></li>
                     <li class="mobile-nav-buttons">
                         <a href="faq.html" class="btn-faq">FAQ</a>
-                        <a href="login.html" class="btn-outline active" style="background-color: #f0f4ff;">Ingreso a Clientes</a>
+                        <a href="login.html" class="btn-outline active" style="background-color: #f0f4ff;">Ingreso a
+                            Clientes</a>
                     </li>
                 </ul>
             </nav>
@@ -121,6 +122,9 @@
     </footer>
 
     <script src="script.js"></script>
+    <a href="https://wa.me/526699947227" class="whatsapp-float" target="_blank">
+        <img src="Recursos/Whattsap icon.png" alt="WhatsApp">
+    </a>
 </body>
 
 </html>
