--- a/login.html
+++ b/login.html
@@ -104,6 +104,10 @@
                     </ul>
                 </div>
                 <div class="footer-col footer-social">
+                    <a href="https://wa.me/526699947227" aria-label="WhatsApp" target="_blank"
+                        style="margin-right: 10px;">
+                        <img src="Recursos/Whattsap icon.png" alt="WhatsApp">
+                    </a>
                     <a href="https://www.linkedin.com/company/eureka-mx/" aria-label="LinkedIn"><img
                             src="Recursos/LinkedIn_logo_initials.png" alt="LinkedIn"></a>
                 </div>
