--- a/faq.html
+++ b/faq.html
@@ -217,7 +217,8 @@
                         <h3>¿Tienes más preguntas?</h3>
                         <p>Nuestro equipo está listo para ayudarte con cualquier duda específica que tengas sobre la
                             plataforma.</p>
-                        <a href="mailto:omar.tirado@eurekamx.com.mx" class="btn-direct-mail">Enviar Correo Directo</a>
+                        <a href="mailto:omar.tirado@eurekamx.com.mx?subject=Duda%20sobre%20Eureka&body=Hola%2C%0A%0ATengo%20algunas%20dudas%20sobre%20la%20plataforma%20Eureka%20y%20me%20gustar%C3%ADa%20recibir%20m%C3%A1s%20informaci%C3%B3n%20al%20respecto.%0A%0ASaludos"
+                            class="btn-direct-mail">Enviar Correo Directo</a>
                     </div>
                 </div>
             </div>
