--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                             de que impacten el resultado.
                         </p>
                         <div class="hero-buttons">
-                            <a href="mailto:omar.tirado@eurekamx.com.mx" class="btn-white">Solicitar Demo</a>
+                            <a href="mailto:omar.tirado@eurekamx.com.mx?subject=Solicitud%20de%20Demo%20-%20Eureka&body=Hola%2C%0A%0AMe%20gustar%C3%ADa%20solicitar%20una%20demostraci%C3%B3n%20de%20la%20plataforma%20Eureka%20para%20mi%20negocio.%0A%0ASaludos"
+                                class="btn-white">Solicitar Demo</a>
                             <a href="#contact-info" class="btn-transparent">Contactos</a>
                         </div>
                     </div>
