New contact logo

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <div class="footer-col footer-social">
                     <a href="https://wa.me/526699947227" aria-label="WhatsApp" target="_blank"
                         style="margin-right: 10px;">
-                        <img src="Recursos/Whattsap icon.png" alt="WhatsApp">
+                        <img src="Recursos/Contact_whatsapp logopng.png" alt="WhatsApp">
                     </a>
                     <a href="https://www.linkedin.com/company/eureka-mx/" aria-label="LinkedIn">
                         <img src="Recursos/LinkedIn_logo_initials.png" alt="LinkedIn">
@@ -564,7 +564,7 @@
 
     <script src="script.js"></script>
     <a href="https://wa.me/526699947227" class="whatsapp-float" target="_blank">
-        <img src="Recursos/Whattsap icon.png" alt="WhatsApp">
+        <img src="Recursos/Contact_whatsapp logopng.png" alt="WhatsApp">
     </a>
 </body>
 
