--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
         <div class="login-card">
             <!-- Left Column: Image -->
             <div class="login-image-col">
-                <img src="Recursos/Login_Mockup.png" alt="User working on Laptop">
+                <img src="Recursos/Login_Mockup.jpg" alt="User working on Laptop">
             </div>
 
             <!-- Right Column: Form -->
