--- a/index.html
+++ b/index.html
@@ -367,34 +367,37 @@
                             </div>
                         </div>
                     </div>
-                    <div class="promo-carousel-dots">
-                        <span class="carousel-dot active" data-index="0"></span>
-                        <span class="carousel-dot" data-index="1"></span>
-                        <span class="carousel-dot" data-index="2"></span>
-                        <span class="carousel-dot" data-index="3"></span>
-                        <span class="carousel-dot" data-index="4"></span>
-                        <span class="carousel-dot" data-index="5"></span>
-                        <span class="carousel-dot" data-index="6"></span>
-                        <span class="carousel-dot" data-index="7"></span>
-                    </div>
                 </div>
+                <button class="carousel-arrow prev" aria-label="Previous Slide">❮</button>
+                <button class="carousel-arrow next" aria-label="Next Slide">❯</button>
+                <div class="promo-carousel-dots">
+                    <span class="carousel-dot active" data-index="0"></span>
+                    <span class="carousel-dot" data-index="1"></span>
+                    <span class="carousel-dot" data-index="2"></span>
+                    <span class="carousel-dot" data-index="3"></span>
+                    <span class="carousel-dot" data-index="4"></span>
+                    <span class="carousel-dot" data-index="5"></span>
+                    <span class="carousel-dot" data-index="6"></span>
+                    <span class="carousel-dot" data-index="7"></span>
+                </div>
+            </div>
 
-                <!-- Right: Display (Desktop) -->
-                <div class="promo-display">
-                    <div class="display-card">
-                        <div class="display-image-placeholder">
-                            <!-- Image will be injected here via CSS/JS or just a placeholder div for now -->
-                            <img id="promo-display-img" src="" alt="Functionality Preview" style="display:none;">
-                            <div class="placeholder-box"></div>
-                        </div>
-                        <div class="display-info">
-                            <h3 id="promo-display-title">Planificación de rutas</h3>
-                            <p id="promo-display-desc">Optimiza las rutas de visita para maximizar la eficiencia de tu
-                                equipo de promotoría.</p>
-                        </div>
+            <!-- Right: Display (Desktop) -->
+            <div class="promo-display">
+                <div class="display-card">
+                    <div class="display-image-placeholder">
+                        <!-- Image will be injected here via CSS/JS or just a placeholder div for now -->
+                        <img id="promo-display-img" src="" alt="Functionality Preview" style="display:none;">
+                        <div class="placeholder-box"></div>
+                    </div>
+                    <div class="display-info">
+                        <h3 id="promo-display-title">Planificación de rutas</h3>
+                        <p id="promo-display-desc">Optimiza las rutas de visita para maximizar la eficiencia de tu
+                            equipo de promotoría.</p>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
