Semi_Final Eureka

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 <div class="hero-inner">
                     <div class="hero-content">
                         <p class="hero-subtitle">CON INTELIGENCIA DE DATOS RETAIL</p>
-                        <h1>Menos agotados.<br>Menos pérdidas.<br>Más control en tienda.</h1>
+                        <h1>Menos agotados.<br>Menos pérdidas.<br><span class="hero-highlight">Más control de
+                                ventas.</span></h1>
                         <p class="hero-description">
                             Mientras tus datos están dispersos y llegan tarde, las decisiones cuestan margen.<br>
                             Eureka conecta ventas, inventarios y ejecución en tienda para que veas los problemas antes
@@ -486,11 +487,33 @@
             <div class="contact-details">
                 <div class="contact-item">
                     <h3>Email</h3>
-                    <p>omar.tirado@eurekamx.com.mx</p>
+                    <div class="copy-wrapper">
+                        <p id="contact-email">omar.tirado@eurekamx.com.mx</p>
+                        <button class="copy-btn" data-target="contact-email" aria-label="Copiar email">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                            </svg>
+                        </button>
+                        <span class="copy-feedback">Copied!</span>
+                    </div>
                 </div>
                 <div class="contact-item">
                     <h3>Teléfono</h3>
-                    <p>+52 669 9947227</p>
+                    <div class="copy-wrapper">
+                        <p id="contact-phone">+52 669 9947227</p>
+                        <button class="copy-btn" data-target="contact-phone" aria-label="Copiar teléfono">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                            </svg>
+                        </button>
+                        <span class="copy-feedback">Copied!</span>
+                    </div>
                 </div>
             </div>
             <div class="contact-actions">
