PART ONE FINISH (CHECKPOINT)

--- a/index.html
+++ b/index.html
@@ -519,8 +519,9 @@
             <div class="contact-actions">
                 <a href="mailto:omar.tirado@eurekamx.com.mx?subject=Solicitud%20de%20An%C3%A1lisis%20-%20Eureka&body=Hola,%0A%0AMe%20gustar%C3%ADa%20solicitar%20un%20an%C3%A1lisis%20de%20mi%20operaci%C3%B3n%20comercial.%0A%0ASaludos"
                     class="action-btn primary">Solicitar análisis</a>
-                <a href="https://wa.me/526699947227" class="action-btn primary" target="_blank">WhatsApp</a>
-                <a href="tel:+526699947227" class="action-btn primary">Llamar</a>
+                <a href="https://wa.me/526699947227" class="action-btn primary custom-outline-btn"
+                    target="_blank">WhatsApp</a>
+                <a href="tel:+526699947227" class="action-btn primary custom-outline-btn">Llamar</a>
             </div>
         </div>
     </section>
